--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,9 @@
     <title>Taco Cloud</title>
 </head>
 <body>
-  <h2>Taco Cloud Admin</h2>
+<h2>Taco Cloud Admin</h2>
+<ul>
+    <li><a th:href="@{/admin/ingredients}">Manage Ingredients</a></li>
+</ul>
 </body>
 </html>
